<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".views.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imv_perfil"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorPrimary"/>
            <TextView
                android:id="@+id/txv_name"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/esquinas_redondeadas"
            android:padding="@dimen/margin_app">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/likes"/>
                    <TextView
                        android:id="@+id/txv_likes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="1dp"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_3"
                    android:layout_marginBottom="@dimen/margin_3"
                    android:background="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posts"/>
                    <TextView
                        android:id="@+id/txv_posts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="1dp"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_3"
                    android:layout_marginBottom="@dimen/margin_3"
                    android:background="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shares"/>
                    <TextView
                        android:id="@+id/txv_shares"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="1dp"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_3"
                    android:layout_marginBottom="@dimen/margin_3"
                    android:background="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friends"/>
                    <TextView
                        android:id="@+id/txv_friends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="24dp"
                    android:paddingBottom="4dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="#009688"
                        android:layout_marginRight="@dimen/margin_small"
                        android:src="@drawable/ic_account"/>
                    <TextView
                        android:id="@+id/txv_years"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="#009688"
                        android:layout_marginRight="@dimen/margin_small"
                        android:src="@drawable/ic_email"/>
                    <TextView
                        android:id="@+id/txv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="#009688"
                        android:layout_marginRight="@dimen/margin_small"
                        android:src="@drawable/ic_location"/>
                    <TextView
                        android:id="@+id/txv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="#009688"
                        android:layout_marginRight="@dimen/margin_small"
                        android:src="@drawable/ic_business"/>
                    <TextView
                        android:id="@+id/txv_occupation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical">
                <Button
                    android:id="@+id/btn_feed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ir_al_feed"/>

                <Button
                    android:id="@+id/btn_friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ir_a_amigos"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>